add support for geoscan images